--- a/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX.uvprojx
+++ b/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX.uvprojx
@@ -753,7 +753,15 @@
               <FileType>1</FileType>
               <FilePath>..\BSP\Src\bsp_key.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_rgb.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\Src\bsp_rgb.c</FilePath>
+            </File>
           </Files>
+        </Group>
+        <Group>
+          <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
           <GroupName>Middlewares/Composite/USB/COMPOSITE/COMPOSITE</GroupName>
@@ -1740,9 +1748,6 @@
               </FileOption>
             </File>
           </Files>
-        </Group>
-        <Group>
-          <GroupName>::CMSIS</GroupName>
         </Group>
       </Groups>
     </Target>
