--- a/3.Software/Mini_SDVX_BSP/daplink.cfg
+++ b/3.Software/Mini_SDVX_BSP/daplink.cfg
@@ -3,9 +3,10 @@ adapter driver cmsis-dap
 transport select swd
 
 # 0x10000 = 64K Flash Size
-set FLASH_SIZE 0x40000
+# set FLASH_SIZE 0x40000
 
 source [find target/stm32f4x.cfg]
 # download speed = 10MHz
+adapter speed 50000
 
 adapter speed 20000
